Removed feed entries API
