# openapi.yaml
@@ -1075,90 +1075,6 @@ paths:
                 $ref: '#/components/schemas/Config'
       security:
       - {}
-  /feedEntries:
-    get:
-      tags:
-      - Feed Entries
-      description: List feed entries
-      operationId: listFeedEntries
-      parameters:
-      - name: feedId
-        in: query
-        description: Filter by the ID of the associated RSS feed
-        required: false
-        schema:
-          type: string
-          format: uuid
-      - name: cursor
-        in: query
-        description: Pagination cursor
-        required: false
-        schema:
-          type: string
-      responses:
-        '200':
-          description: Paginated list of feed entries
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Paginated_FeedEntry'
-        '401':
-          description: User not authenticated
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        default:
-          description: Unknown error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-  /feedEntries/{id}:
-    get:
-      tags:
-      - Feed Entries
-      description: Get a feed entry by ID
-      operationId: getFeedEntry
-      parameters:
-      - name: id
-        in: path
-        description: Unique identifier of the resource
-        required: true
-        schema:
-          type: string
-          format: uuid
-      responses:
-        '200':
-          description: Feed entry by ID
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/FeedEntry'
-        '401':
-          description: User not authenticated
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        '403':
-          description: User not authorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        '404':
-          description: Feed entry not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        default:
-          description: Unknown error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
   /feeds/detect:
     post:
       tags:
@@ -2559,66 +2475,6 @@ components:
               updatedAt:
                 type: string
                 format: date-time
-          description: Current set of results
-        cursor:
-          type: string
-          description: Pagination cursor, only present if more results are available
-    Paginated_FeedEntry:
-      type: object
-      description: Paginated list of results
-      required:
-      - items
-      properties:
-        items:
-          type: array
-          items:
-            type: object
-            description: RSS feed entry
-            required:
-            - id
-            - link
-            - title
-            - publishedAt
-            - description
-            - author
-            - thumbnailUrl
-            - feedId
-            properties:
-              id:
-                type: string
-                format: uuid
-                description: Unique identifier of the feed entry
-              link:
-                type: string
-                format: uri
-                description: URL of the webpage the feed entry links to
-              title:
-                type: string
-                description: Title of the feed entry
-              publishedAt:
-                type: string
-                format: date-time
-                description: Timestamp at which the feed entry was published
-              description:
-                type:
-                - string
-                - 'null'
-                description: Description of the feed entry
-              author:
-                type:
-                - string
-                - 'null'
-                description: Author of the feed entry
-              thumbnailUrl:
-                type:
-                - string
-                - 'null'
-                format: uri
-                description: Thumbnail URL of the feed entry
-              feedId:
-                type: string
-                format: uuid
-                description: Unique identifier of the associated RSS feed
           description: Current set of results
         cursor:
           type: string
